tests/pass/assign/local.tox
fn main() {
  {
    let a = "before";
    print a; // expect:before

    a = "after";
    print a; // expect:after

    a = "arg";
    print(a); // expect:arg
  }
}