tests/fail/assign/to_this.tox
class Foo {
  fn Foo(this:Foo) {
    this = "value"; //error: Cannot unify `Class Foo` vs `Str`
  }
}

fn main() {
  Foo();
}